# mstch

./: BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
include/mstch/: mstch.hpp
src/: mstch.cpp  token.cpp  utils.hpp
src/state/: in_section.hpp  outside_section.cpp  render_state.hpp
src/visitor/: is_node_empty.hpp  render_node.hpp  render_section.hpp
test/: mstch_test.cpp  mstch_test_data.hpp  spec_test.cpp  spec_tests.cpp  specs_lambdas.hpp  unit_tests.cpp
test/data/: specs_lambdas.hpp
