# mstch library
cc_library(
    name = "mstch",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp", "src/**/*.hpp"]),
    includes = ["include", "src"],
    deps = ["@boost.variant"],
)

filegroup(
    name = "test_data",
    srcs = glob([
        "test/data/*.mustache",
        "test/data/*.partial",
        "test/data/*.txt",
    ]),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mstch_test",
    srcs = glob([
        "test/mstch_test.cpp",
        "test/mstch_test_data.hpp",
        "test/data/*.hpp",
    ]),
    data = [":test_data"],
    deps = [
        ":mstch",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

filegroup(
    name = "json_specs",
    srcs = glob(["test/spec/specs/*.json"]),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spec_test",
    srcs = [
        "test/spec_test.cpp",
        "test/specs_lambdas.hpp"
    ],
    data = [":json_specs"],
    deps = [
        ":mstch",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@jsoncpp",
        "@bazel_tools//tools/cpp/runfiles",
        "@boost.variant",
    ],
)
