# mstch library
load("@bazel_skylib//lib:selects.bzl", "selects")

# Define a config_setting for Windows
config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

CPP17_FLAGS = select({
    ":windows": ["/std:c++17", "/EHsc"],  # MSVC flags
    "//conditions:default": ["-std=c++17"],  # GCC/Clang flags
})

cc_library(
    name = "mstch",
    visibility = ["//visibility:public"],
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp", "src/**/*.hpp"]),
    includes = ["include", "src"],
    copts = CPP17_FLAGS,
)

filegroup(
    name = "test_data",
    srcs = glob([
        "test/data/*.mustache",
        "test/data/*.partial",
        "test/data/*.txt",
    ]),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mstch_test",
    srcs = glob([
        "test/mstch_test.cpp",
        "test/mstch_test_data.hpp",
        "test/data/*.hpp",
    ]),
    copts = CPP17_FLAGS,
    data = [":test_data"],
    deps = [
        ":mstch",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

filegroup(
    name = "json_specs",
    srcs = glob(["test/spec/specs/*.json"]),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spec_test",
    srcs = [
        "test/spec_test.cpp",
        "test/specs_lambdas.hpp"
    ],
    copts = CPP17_FLAGS,
    data = [":json_specs"],
    deps = [
        ":mstch",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@jsoncpp",
        "@bazel_tools//tools/cpp/runfiles",
    ],
)
